--- a/rapport.bib
+++ b/rapport.bib
@@ -164,7 +164,8 @@
               Blanc, Xavier and Teyton, Cédric},
     booktitle = {2023 IEEE International Conference on Software Analysis,
                  Evolution and Reengineering (SANER)},
-    title = {MLinter: Learning Coding Practices from Examples—Dream or Reality?},
+    title = {MLinter: Learning Coding Practices from Examples - Dream or
+             Reality?},
     year = {2023},
     volume = {},
     number = {},
@@ -174,3 +175,14 @@
                 practices;machine learning;CodeBERT},
     doi = {10.1109/SANER56733.2023.00092},
 }
+
+@misc{dataset-code-lm,
+    title = {Code-LMs datasets},
+    howpublished = {\url{https://github.com/VHellendoorn/Code-LMs\#datasets}},
+}
+
+@misc{gh-students,
+    title = {GitHub Students},
+    howpublished = {\url{https://github.com/education/students}},
+}
+
