--- a/sections/1-presentation.tex
+++ b/sections/1-presentation.tex
@@ -7,13 +7,13 @@ Ce stage s'inscrit dans le cadre de l'UE Stage Informatique du Semestre 5 de a L
 
 \subsection{Organisme d'acceuil et Encadrant}
 
-Ce stage s'est déroulé au sein de \href{https://www.labri.fr/}{LaBRI} (Laboratoire Bordelais de Recherche de Informatique) situé sur le Campus Peixotto de l'Université.
+Le stage s'est déroulé au sein de \href{https://www.labri.fr/}{LaBRI} (Laboratoire Bordelais de Recherche de Informatique) situé sur le Campus Peixotto de l'Université.
 L'établissement acceuil de nombreux enseignants-chercheurs exerçant à l'Université et à l'ENSEIRB-MATMECA de Bordeaux INP,
 mais aussi des chercheurs CNRS ainsi qu'un centaine de doctorants.
 
 Le bâtiment principal est situé sur le campus Peixotto, il s'agit du bâtiment A30, juste derrière le CREMI.
 Malheureusement, pendant cette période de stage il n'y avait pas de bureau disponible directement au LaBRI,
-j'ai donc dû travailler au CREMI.
+j'ai donc dû travailler au CREMI (bâtiment A28).
 
 Le stage a été encadré par \href{https://www.labri.fr/perso/falleri/}{Mr FALLERI Jean-Rémy}, Enseignant-Chercheur à Bordeaux INP (ENSEIRB-MATMECA) et au LaBRI, et Mr ROBBES Romain, directeur de recherches CNRS.
 
@@ -21,3 +21,4 @@ Le stage a été encadré par \href{https://www.labri.fr/perso/falleri/}{Mr FALL
 
 Le sujet du stage a été \emph{la mise en place d'experiences et l'étude des résultats sur l’impact de l’utilisation des IA génératives de code sur les developpeurs}.
 Ce sujet m'as été proposé par mon encadrant avant le début du stage, et je l'ai choisi car il me semblait intéressant d'aborder la question de la recherche et que je puisse me faire une idée du fonctionnement du métier et de tâches qui y sont associées.
+L'objectif proposé était d'explorer les outils pouvant être utilisés pour mettre en place un protocol expérimental autour de ces assistants de développement.
