--- a/sections/4-bilan.tex
+++ b/sections/4-bilan.tex
@@ -1,4 +1,18 @@
 \chapter{Bilan}
 \label{bilan}
 
-TODO
+Selon moi l'objectif principal de ce stage, qui était de faire un pas dans le monde de la recherche, est un totalement réalisé.
+En effet j'envisageait de continuer mes études dans cette voie, mais il me manquait tout de même une part d'expérience, et ce stage était la meilleure opportunité pour pouvoir s'y plonger.
+
+Au cours de ce stage j'ai pu apprendre à correctement lire des articles scientifique pour en tirer des information pertinantes pouvant être utilisées dans le contexte voulu.
+Cela m'as aussi donné un aperçu du fonctionnement de la démarche scientifique et des méthodes entrant en jeu dans la mise en place d'expériences, et la visualisation des données.
+
+D'un point de vue technique, je suis satisfait d'avoir pu finir l'instrumentation de CodeGRITS et d'avoir quelque chose qui fonctionne et qui pourrait être utilisé dans le futur par d'autres.
+J'ai pu aussi expérimenter avec des outils annexes comme \href{https://asciidoc.org/}{asciidoc} pour l'écriture de mes résumé et documentation, et \LaTeX{} pour ce rapport.
+
+Toutefois, quelques petits manques se font sentirs: tout au début du stage, l'un des objectif potentiels que nous avons évoqué était de mettre en place un protocol expérimental et de pouvoir
+le tester avec d'autres stagiaires. Malheureusement, les autres tâches se sont averées plutot chronophages, et c'est donc quelque chose qui n'as pas pû être fait.
+Un autre regret est la durée du stage, qui n'as finalement été que d'un mois et demi à cause de limites personnelles et administratives,
+ce qui a poser des limites sur ce qui était possible de réaliser et même sur le sujet lui-même.
+
+Je garde tout de même un très bon souvenir de cette période, studieuse et enrichissante, au cours de laquelle j'ai pu rencontrer des personnes inspirantes et decouvrir un monde passionnant.
